Introduced schema validation endpoint and refactored json mock files
